--- a/src/style/index.less
+++ b/src/style/index.less
@@ -4,6 +4,9 @@
 @import 'template/positionInfo.less';
 @import 'template/company.less';
 @import 'template/positionClass.less';
+@import 'template/search.less';
+@import 'template/sheet.less';
+@import 'template/tab.less';
 @import 'property.less';
 @import 'position.less';
 
