--- a/src/style/index.less
+++ b/src/style/index.less
@@ -4,11 +4,15 @@
 @import 'template/positionInfo.less';
 @import 'template/company.less';
 @import 'template/positionClass.less';
-@import 'template/search.less';
-@import 'template/sheet.less';
 @import 'template/tab.less';
+@import 'template/sheet.less';
 @import 'property.less';
 @import 'position.less';
+@import 'search.less';
+@import 'login.less';
+@import 'register.less';
+@import 'me.less';
+@import 'post.less';
 
 .ng-enter {
   transition:0.5s linear all;
