--- a/src/view/post.html
+++ b/src/view/post.html
@@ -1,3 +1,3 @@
-<div app-head-bar text="Send History"></div>
-<div app-tab list="tabList"></div>
-<div app-position-list data="positionList"></div>
+<div app-head-bar text="投递记录"></div>
+<div app-tab tab-click="tClick(id,name);" list="tabList"></div>
+<div class="my-post" filter-obj="filterObj" app-position-list data="positionList"></div>
