--- a/src/view/register.html
+++ b/src/view/register.html
@@ -2,14 +2,14 @@
   <form class="d-b ta-c" name="form">
     <div class="form-line ta-l p-r">
       <span class="icon account va-t d-ib"></span>
-      <input ng-model="user.phone" validator="phone" class="d-ib" type="text" placeholder="Enter phone">
+      <input name = "phone" ng-model="user.phone" validator="required,phone" class="d-ib" type="text" placeholder="Enter phone">
     </div>
     <div class="form-line ta-l p-r">
       <span class="icon lock va-t d-ib"></span>
-      <input ng-model="user.password" validator="password" class="d-ib" type="password" placeholder="Set 6 digits passcode">
+      <input name = "password" ng-model="user.password" validator="required,password" class="d-ib" type="password" placeholder="Set 6 digits passcode">
     </div>
     <div class="message-wrap ta-l p-r">
-      <input validator="required" ng-model="user.code" class="message-box" placeholder="Message" type="text">
+      <input name = "code" validator="required" ng-model="user.code" class="message-box" placeholder="Message" type="text">
       <span class="message f-r {{time?'disabled':''}}" ng-click="time?1==1:send();" ng-bind="time?time:'发送短信'"></span>
       <div class="clear"></div>
     </div>
