--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -1,9 +1,9 @@
 @defaultColor: #fff;
-@headBgColor: #12d5b5;
+@headBgColor:#12a7d5;
 @warnColor: #feae11;
 @muteColor: #9f9e9d;
 @lineColor: #d4d4d4;
-@highlightBgColor: #dbf9f4;
+@highlightBgColor: #dbf0f9;
 @highlightColor: #01c2a3;
 @bodyBgColor: #eee;
 @listLineColor: #ddd;
